[package]
name = "coinselect_rust-coinselect-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = {version="1.4", features=["derive"]}

[dependencies.rust-coinselect]
path = ".."

[[bin]]
name = "coinselect"
path = "fuzz_targets/coinselect.rs"
test = false
doc = false
bench = false
